--- a/tsunagaru-kun/Info.plist
+++ b/tsunagaru-kun/Info.plist
@@ -3,7 +3,10 @@
 <plist version="1.0">
 <dict>
 	<key>NSAppTransportSecurity</key>
-	<dict/>
+	<dict>
+		<key>NSAllowsLocalNetworking</key>
+		<true/>
+	</dict>
 	<key>NSArrowsLocalNetworking</key>
 	<true/>
 	<key>CFBundleDevelopmentRegion</key>
